src/test/ui/feature-gates/feature-gate-native_link_modifiers.stderr
error[E0658]: native link modifiers are experimental
  --> $DIR/feature-gate-native_link_modifiers.rs:1:22
   |
LL | #[link(name = "foo", modifiers = "")]
   |                      ^^^^^^^^^^^^^^
   |
   = note: see issue #81490 <https://github.com/rust-lang/rust/issues/81490> for more information
   = help: add `#![feature(native_link_modifiers)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
