src/test/ui/feature-gates/feature-gate-native_link_modifiers.rs
#[link(name = "foo", modifiers = "")]
//~^ ERROR: native link modifiers are experimental
extern "C" {}

fn main() {}
